[package]
name = "mandelbrot-vulkan"
version = "0.1.0"
authors = ["Siddharth Naithani <siddharthn.099@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.24"
vulkano-shaders = "0.13"
image = "0.22"
